spark-etl-datascience-demo/spark-etl-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: spark-client-mode
  namespace: spark-etl-project
spec:
  podSelector:
    matchLabels:
      notebook-name: spark-etl
  ingress:
    - ports:
        - protocol: TCP
          port: 2222
        - protocol: TCP
          port: 7777
      from:
        - podSelector: {}
  policyTypes:
    - Ingress
